# ChangeLog for media-sound/abcm2ps
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.45 2012/03/06 05:31:15 radhermit Exp $

*abcm2ps-7.0.3 (06 Mar 2012)

  06 Mar 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.0.3.ebuild:
  Version bump.

  26 Feb 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.6.3.ebuild,
  -abcm2ps-6.6.4.ebuild, -abcm2ps-6.6.5.ebuild, -abcm2ps-7.0.1.ebuild:
  Remove old.

*abcm2ps-7.0.2 (26 Feb 2012)
*abcm2ps-6.6.7 (26 Feb 2012)

  26 Feb 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.7.ebuild,
  +abcm2ps-7.0.2.ebuild:
  Version bumps.

*abcm2ps-7.0.1 (15 Feb 2012)

  15 Feb 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-7.0.1.ebuild:
  Version bump to latest dev release.

*abcm2ps-6.6.6 (15 Feb 2012)

  15 Feb 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.6.ebuild:
  Version bump.

*abcm2ps-6.6.5 (07 Feb 2012)

  07 Feb 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.5.ebuild:
  Version bump.

*abcm2ps-6.6.4 (03 Feb 2012)

  03 Feb 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.4.ebuild:
  Version bump.

  25 Jan 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-5.9.15.ebuild,
  -abcm2ps-5.9.25.ebuild:
  Remove old.

*abcm2ps-6.6.3 (17 Jan 2012)

  17 Jan 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.15.ebuild,
  -abcm2ps-6.5.16.ebuild, +abcm2ps-6.6.3.ebuild:
  Version bump and remove old.

*abcm2ps-6.5.16 (23 Dec 2011)

  23 Dec 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.13.ebuild,
  +abcm2ps-6.5.16.ebuild:
  Version bump and remove old.

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> abcm2ps-5.9.15.ebuild,
  abcm2ps-5.9.24.ebuild, abcm2ps-5.9.25.ebuild, abcm2ps-6.5.13.ebuild,
  abcm2ps-6.5.15.ebuild:
  Drop sparc keywords

*abcm2ps-6.5.15 (05 Dec 2011)

  05 Dec 2011; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.5.15.ebuild:
  Version bump.

*abcm2ps-6.5.13 (26 Nov 2011)
*abcm2ps-5.9.25 (26 Nov 2011)
