@@ -4,24 +4,26 @@ Hash: SHA512
 DIST abcm2ps-5.9.24.tar.gz 254329 RMD160 26695fabb540b17bd2dee86ba18c7fa3baa11e8b SHA1 7261ea8d2442a63897f97882e788c2d2404cd8c9 SHA256 008f8cde72c09ddd1c6a61d0b1f86d0733f35b76c94b7ceaeff97d02e8bcc53f
 DIST abcm2ps-6.6.6.tar.gz 295729 RMD160 8f499b91965116992b4e35635983b341541aa85c SHA1 c10182447dc57a735317c853c7ca9da30069764f SHA256 cf61266be7cba6df903fc6e858d2920532aaef9093d55483193d913284baea03
 DIST abcm2ps-6.6.7.tar.gz 295852 RMD160 e1374d63e3257b2e82760d49b5dd0b89511d89e8 SHA1 b21ce7a6d3938c8f805e2fbae37f70437622a908 SHA256 25cf827cc3861255eaef67c74bdbfb47d14b2e52fd9b5c0277773dd83050ecc2
+DIST abcm2ps-6.6.8.tar.gz 295931 RMD160 a3160c4f8a33beb6bb2c4878dfb8a877e6023da8 SHA1 1c34cf25b9e8459afbcf5dd5e1a67dfb122a925e SHA256 747661e847fa1d7c2e18c6d4d10202e03597ccdb171f8ad94fab4d76cbc6993f
 DIST abcm2ps-7.0.2.tar.gz 297233 RMD160 e146812392da06e25646b17b26fbd9a88d678e2f SHA1 0c4eb30e6773e50aba57b588d0ae9884c84fb5da SHA256 dd6083aa7bc6d320a2a630d80a5e17c9f43952e0b89b93672b16f443d1925090
 DIST abcm2ps-7.0.3.tar.gz 297636 RMD160 6b9aaadb1988c37eb2af8991f91ef83ea59223db SHA1 39fdb3b251ffcd2ed020697db6466ef690a181c0 SHA256 49f56598cc749c35c4c80a5776facd5d542c4cf059c92378b0667c29fd0b314b
 DIST transpose_abc.pl 21045 RMD160 3ea7c36f80249a2c6e6c03eca0d9d58c054e2cfc SHA1 82a852ae790d6f379d48e4f3acc5aeba0236e575 SHA256 bd6960872bfbc9f71f183f36d533ea33b8cf62a6027b447f0b0b8adfa25a2848
 EBUILD abcm2ps-5.9.24.ebuild 916 RMD160 dbd8d6ee03bbd75d314d5280586d2da79157e967 SHA1 c9e3c056f2f92d6c41cba3fc7011f9ff948c4e3f SHA256 0b84b2f98de9fe2281f411859da06fccccf2ee7d02ad20504850d551d6ae2979
 EBUILD abcm2ps-6.6.6.ebuild 961 RMD160 7e1b102beec9c411e073b419de04060098389e4e SHA1 d71dd0a52dce24e173522c9f2407168dd56f4669 SHA256 013ce8ce77ed9c434fd04e193cdfec55d37ef8370a42009bcd94a9a4a9413093
 EBUILD abcm2ps-6.6.7.ebuild 961 RMD160 4e2879959bdafc179c3721609180d0b925b33257 SHA1 dcd5267c917b830f8731b90ae29e2d982cdf1006 SHA256 c805c318fa439790172397e35f95fd380d309e623716c89d18dd77573bbf5ff1
+EBUILD abcm2ps-6.6.8.ebuild 961 RMD160 e87d7463065e1842e467c37b7f2e51774b0fc1e6 SHA1 f7707bbba6aeb53fb52f5fa49c7fe8234230820e SHA256 ca38ebe1397c9d6b97f57d3f428b0f3bf5811502d4d2ac445ceda94797ad3320
 EBUILD abcm2ps-7.0.2.ebuild 961 RMD160 ed212ea7b03f3046e3b5468bffd1506670d9d2f5 SHA1 d8f30b6ec6f425628944df82c3a494ffce74ec0f SHA256 b3f87fa17d56a25c5153b130e04084e5cae0b88f8b4803c622fe10eaa072e0aa
 EBUILD abcm2ps-7.0.3.ebuild 961 RMD160 247da5ad37f741b9176e35c8c08e2cc8679bc633 SHA1 6fda2a5543c7a632964ad4a7f73fbdda84d1fe4a SHA256 bf5437efefd966e34a72f9a1e1228a5ee930e8492e751ec9d88de5f4fc5bfd14
-MISC ChangeLog 5961 RMD160 2d25a7835055e2c05697560bfe2054e02421cf19 SHA1 d127e21ee63a127afb6dd3c25b250c74dc738c6f SHA256 10773e117686d5fb58b95325d38a5cba43e1649e8e288c4f80a84da6ab3543ab
+MISC ChangeLog 6080 RMD160 b9d104b4b34821eee84a049b94e844d2ebfcc578 SHA1 d0d1e754f86f659e2031f59017ab7d4bf3dc5ace SHA256 190f9b4b912821a39e10bd725bc470a85dcb4ed04a970fb7cc6292e7bf065025
 MISC metadata.xml 266 RMD160 1700527d350df7d0cb37e6c85fd95c48b6499954 SHA1 825eb09201078ff8b477b2266c9e78e14e403e82 SHA256 b6d28625a7ff66404b06e40afb779f07f18be590235136a1229eff61c270eddd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPVaEoAAoJEEqz6FtPBkyjKk8H/1Y2C5TcMp1mr3U1VrUh4y1Z
-5Dw6n2X4tW5qEh0Pgn+q6bdZigGVqF6Rj8JiKOJLJBvwfEZzZmR4y4dK9RPumuhG
-cWy3d4GiCebBzrPXFh7uz0V3vhVTeQNbw/AaZ/FZzeQZGkLWIYaay2ccV/nEy7iM
-95u5OAyU501INrsep9VFF9e935+smJOIK4sP2yD/m69LzhCscvImblPhgvpBt+1K
-cLN0383yNeb/sxKISeU0WaOfOYw+7Vkqohy3m8j+j1H1sT3ttDAABf0jjnUwC95I
-t41HTVVKYEQp9nBMykdEJAR6iAF5U8IlBKea6U+xCr+EmKa1c8iB8tlekO3bpJY=
-=UET2
+iQEcBAEBCgAGBQJPXu4tAAoJEEqz6FtPBkyj6BAH+QHjfrr2UZNaIOkVPTy9OhaM
+upg4gywwYmEgcpLtLNppfm4WHsBPdQQQLebcpymteXFJ6AhHd/a1w6Ts5b7Pcyj1
+LxWw9airAyGRLhGY5MZ//Hh+w/kJeoiaXccfDQfInZhCIrV88li7rlmh1OfURFD+
+zP5YLLiFCraxvOeVXRJlU85za7wBygtcpGb9cKZ6QpoqK5vYZlNckHO5VREkSzjK
+q+S0xK1eQKydCwyNEC4O7JQIAXLfC+g68TpP7IRYBZkTeXQTvlu+p5VR0P2Jf1gY
+pUEcUARiLXFK2NxjXjiiLJOUTq8Mmv2lwmMQ7NG5E7WPUqa3wTEIqHTm4LcQM58=
+=gBP3
 -----END PGP SIGNATURE-----
