@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/abcm2ps
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.45 2012/03/06 05:31:15 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.46 2012/03/13 06:50:16 radhermit Exp $
+
+*abcm2ps-6.6.8 (13 Mar 2012)
+
+  13 Mar 2012; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.6.8.ebuild:
+  Version bump.
 
 *abcm2ps-7.0.3 (06 Mar 2012)
 
